# paperclip

./: .dockerignore  .env.caldiy.example  .env.example  .gitignore  .lighthouserc.json  .vercelignore  DEPLOY.md  Dockerfile  docker-compose.test.yml  drift_detection.py  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  requirements.txt  sentry.client.config.ts  sentry.edge.config.ts  test_drift_detection.py  tsconfig.tsbuildinfo  vercel.json
.vercel/: .env.development.local  project.json
app/: auth.py  config.py  main.py  models.py  schemas.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
backend/.pytest_cache/v/cache/: nodeids
backend/8os_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  archetype_engine.py  config.py  database.py  dependencies.py  email.py  logging_config.py  main.py  models.py  resend_client.py  schemas.py  security.py  services.py
backend/app/routers/: telegram.py
backend/tests/: test_live_integration.py  test_resend_client.py  test_telegram_webhook.py  test_waitlist_entry_delete.py
docs/: archie-engine.md  caldiy-integration-plan.md
e2e/: api-health.spec.ts  archetype.spec.ts  auth-smoke.spec.ts  footer-links.spec.ts  og-image.spec.ts  onboarding.spec.ts  os-1903.spec.ts  waitlist-signup.spec.ts
prisma/: schema.prisma
releases/: v2026.720.1.md
scripts/: deploy-gate.test.sh  deploy-with-gate.sh  railway-start.sh  run-vitest-stable.mjs  smoke-probe-8os.sh
src/: middleware.ts
(+313 files in other folders)
