[project]
name = "8os-orchestrator"
version = "0.1.0"
description = "FastAPI orchestrator skeleton with JWT auth for 8OS"
requires-python = ">=3.11"
dependencies = [
  "aiosmtplib>=3.0.0,<4.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<0.116.0",
  "greenlet>=3.2.0,<4.0.0",
  "httpx>=0.28.0,<0.29.0",
  "bcrypt>=4.0.0,<5.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "cryptography>=43.0.0,<44.0.0",
  "pyjwt>=2.10.0,<3.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "uvicorn[standard]>=0.34.0,<0.35.0",
  "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
  "python-multipart>=0.0.9,<0.1.0",
  "slowapi>=0.1.9,<0.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
